welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:18: error: expected class or object definition
def faireV() {
^PictureMono2:36: error: expected class or object definition
def faireMotif() {
^PictureMono2:42: error: Unmatched closing brace '}' ignored here
}
^